--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="header">
-        <img src="msi_logo.png" alt="Motorola Solutions Logo" id="logo" />
-        <h1>Element name generator for Ceros Studio</h1>
+        <div id="header-content"> <img src="msi_logo.png" alt="Motorola Solutions Logo" id="logo" />
+            <h1>Element name generator for Ceros Studio</h1>
+        </div>
     </div>
 
     <form id="multi-step-form">
